[package]
name = "idk"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"             # For Router, routing, extractors, Redirect
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # For JSON
serde_json = "1.0"        # For reading/writing submissions.json
tower-http = { version = "0.4", features = ["fs"] } # For ServeDir
